branch for batch 34, with live coding parts

--- a/01_Linear_Regression.ipynb
+++ b/01_Linear_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "36445b86",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "36b31eef",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ebde894d",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "de6e48e0",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "19731586",
    "metadata": {},
    "outputs": [],
@@ -100,12 +100,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9e387976",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davideposillipo/Documents/Didattica.nosync/DSR_ML_Fundamentals_2023/scripts/Preprocessing.py:83: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "  df['lpep_pickup_datetime_week'] = df['lpep_pickup_datetime'].dt.week\n",
+      "/Users/davideposillipo/Documents/Didattica.nosync/DSR_ML_Fundamentals_2023/scripts/Preprocessing.py:83: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "  df['lpep_pickup_datetime_week'] = df['lpep_pickup_datetime'].dt.week\n",
+      "/Users/davideposillipo/.pyenv/versions/3.10.9/envs/mlops/lib/python3.10/site-packages/sklearn/preprocessing/_encoders.py:170: UserWarning: Found unknown categories in columns [0] during transform. These unknown categories will be encoded as all zeros\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "prepr = Preprocessing(input_data_path_train)\n",
     "X, Y = prepr.read_dataframe(request_tgt=True)\n",
@@ -122,23 +135,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "53bc0603",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculating regression baseline\n",
-    "linear_regression_training.calculate_regression_baseline(Y_train=Y_train, Y_test=Y_test, run_name=run_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6094dc2e",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davideposillipo/.pyenv/versions/3.10.9/envs/mlops/lib/python3.10/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'loss': 5.186934719528432, 'status': 'ok'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "best_result = linear_regression_training.objective_lr(X_train=X_train_ohe,\n",
     "         X_test=X_test_ohe,\n",
@@ -153,6 +174,128 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "73d46e43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "084a3354",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7875a292",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davideposillipo/Documents/Didattica.nosync/DSR_ML_Fundamentals_2023/scripts/Preprocessing.py:83: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "  df['lpep_pickup_datetime_week'] = df['lpep_pickup_datetime'].dt.week\n",
+      "/Users/davideposillipo/Documents/Didattica.nosync/DSR_ML_Fundamentals_2023/scripts/Preprocessing.py:83: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "  df['lpep_pickup_datetime_week'] = df['lpep_pickup_datetime'].dt.week\n",
+      "/Users/davideposillipo/.pyenv/versions/3.10.9/envs/mlops/lib/python3.10/site-packages/sklearn/preprocessing/_encoders.py:170: UserWarning: Found unknown categories in columns [0] during transform. These unknown categories will be encoded as all zeros\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'loss': 4.898901459708821, 'status': 'ok'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_name = \"wrong_base_2\"\n",
+    "\n",
+    "prepr = Preprocessing(input_data_path_train)\n",
+    "X, Y = prepr.read_dataframe(request_tgt=True)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y, test_size=0.3, random_state=seed)\n",
+    "\n",
+    "#preprocessing ohe\n",
+    "shapes_pre = (X_train.shape[0], X_test.shape[0])\n",
+    "X_train_ohe, ohe = prepr.preprocess_for_regression(df=X_train, fit_ohe=True, drop_first_column=True)\n",
+    "X_test_ohe, _ = prepr.preprocess_for_regression(df=X_test, fit_ohe=False, drop_first_column=True, ohe=ohe)\n",
+    "assert shapes_pre == (X_train.shape[0], X_test.shape[0])\n",
+    "dump(ohe, open(local_path_save + run_name + '_ohe.pkl', 'wb'))\n",
+    "\n",
+    "best_result = linear_regression_training.objective_lr(X_train=X_train_ohe,\n",
+    "         X_test=X_train_ohe,\n",
+    "         Y_train=Y_train,\n",
+    "         Y_test=Y_train,\n",
+    "         run_name=run_name)\n",
+    "\n",
+    "best_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c77faae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b208eb8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "345ad1ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fb730272",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['VendorID', 'lpep_pickup_datetime', 'lpep_dropoff_datetime',\n",
+       "       'store_and_fwd_flag', 'RatecodeID', 'PULocationID', 'DOLocationID',\n",
+       "       'passenger_count', 'trip_distance', 'fare_amount', 'extra', 'mta_tax',\n",
+       "       'tip_amount', 'tolls_amount', 'ehail_fee', 'improvement_surcharge',\n",
+       "       'total_amount', 'payment_type', 'trip_type', 'congestion_surcharge',\n",
+       "       'lpep_pickup_datetime_week', 'lpep_pickup_datetime_day',\n",
+       "       'lpep_pickup_datetime_hour', 'lpep_pickup_datetime_minute',\n",
+       "       'lpep_pickup_datetime_dayofweek', 'PU_DO'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "634e1ce9",
    "metadata": {},
    "outputs": [],
    "source": []
