--- a/05_Decision_Tree.ipynb
+++ b/05_Decision_Tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "36445b86",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "36b31eef",
    "metadata": {},
    "outputs": [],
@@ -52,10 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ebde894d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/04/25 15:19:28 INFO mlflow.tracking.fluent: Experiment with name '05 - Decision Tree' does not exist. Creating a new experiment.\n"
+     ]
+    }
+   ],
    "source": [
     "if not os.path.exists(local_path_save):\n",
     "    os.makedirs(local_path_save)\n",
@@ -79,17 +87,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ec621add",
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_name = 'base'"
+    "run_name = 'april2023_base'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "364cb4ba",
    "metadata": {},
    "outputs": [],
@@ -103,12 +111,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "60281d74",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davideposillipo/Documents/Didattica.nosync/DSR_ML_Fundamentals_2023/scripts/Preprocessing.py:161: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "  df['lpep_pickup_datetime_week'] = df['lpep_pickup_datetime'].dt.week\n",
+      "/Users/davideposillipo/Documents/Didattica.nosync/DSR_ML_Fundamentals_2023/scripts/Preprocessing.py:161: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "  df['lpep_pickup_datetime_week'] = df['lpep_pickup_datetime'].dt.week\n"
+     ]
+    }
+   ],
    "source": [
     "prepr = Preprocessing(input_data_path_train, task_type='classification')\n",
     "X, Y = prepr.read_dataframe(request_tgt=True)\n",
@@ -131,18 +150,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "80a8d945",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davideposillipo/.pyenv/versions/3.10.9/envs/mlops/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/davideposillipo/.pyenv/versions/3.10.9/envs/mlops/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'loss': 0.5, 'status': 'ok'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculating the baseline\n",
-    "decision_tree_training.calculate_classification_baseline(Y_train=Y_train, Y_test=Y_test, run_name=run_name)"
+    "decision_tree_training.calculate_classification_baseline(Y_train=Y_train, Y_test=Y_test, run_name=run_name)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "bbc2c960",
    "metadata": {},
    "outputs": [],
@@ -152,8 +192,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4403bf88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████| 1/1 [00:01<00:00,  1.89s/trial, best loss: 0.5850768124270515]\n",
+      "  0%|                                                                                    | 0/1 [00:00<?, ?trial/s, best loss=?]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davideposillipo/.pyenv/versions/3.10.9/envs/mlops/lib/python3.10/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████| 1/1 [00:01<00:00,  1.31s/trial, best loss: 0.5966125820801937]\n",
+      "100%|██████████████████████████████████████████████████████████| 1/1 [00:01<00:00,  1.41s/trial, best loss: 0.5847588427689119]\n",
+      "100%|██████████████████████████████████████████████████████████| 1/1 [00:01<00:00,  1.28s/trial, best loss: 0.5549439076537586]\n",
+      "100%|███████████████████████████████████████████████████████████| 1/1 [00:01<00:00,  1.58s/trial, best loss: 0.539816999389641]\n",
+      "100%|██████████████████████████████████████████████████████████| 1/1 [00:01<00:00,  1.61s/trial, best loss: 0.5314398820210614]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for d in np.arange(2,20,3, dtype=int):\n",
+    "\n",
+    "    max_evals = 1\n",
+    "\n",
+    "    # Here we can decide which hyperparameters we want to tune\n",
+    "    classification_tree_parameters_search = {\n",
+    "        'max_depth': d,\n",
+    "        'random_state': seed\n",
+    "    }\n",
+    "\n",
+    "    decision_tree_training.set_hyperparameter_space(classification_tree_parameters_search)\n",
+    "\n",
+    "    trials = Trials()\n",
+    "\n",
+    "    best_result = fmin(\n",
+    "        fn=partial(decision_tree_training.objective_decision_tree, \n",
+    "            X_train=X_train_ohe,\n",
+    "            X_test=X_test_ohe,\n",
+    "            Y_train=Y_train,\n",
+    "            Y_test=Y_test,\n",
+    "            run_name=run_name,\n",
+    "            threshold=0.5),\n",
+    "        space=decision_tree_training.hp_space,\n",
+    "        algo=tpe.suggest,\n",
+    "        max_evals=max_evals,\n",
+    "        trials=trials,\n",
+    "        rstate=np.random.default_rng(seed)\n",
+    "    )\n",
+    "\n",
+    "    best_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1e83fd8",
    "metadata": {},
    "outputs": [],
    "source": []
