--- a/07_GradientBoosting_and_XGB.ipynb
+++ b/07_GradientBoosting_and_XGB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "36445b86",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "36b31eef",
    "metadata": {},
    "outputs": [],
@@ -53,10 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ebde894d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/01/19 12:08:29 INFO mlflow.tracking.fluent: Experiment with name '07 - GB and XGB' does not exist. Creating a new experiment.\n"
+     ]
+    }
+   ],
    "source": [
     "if not os.path.exists(local_path_save):\n",
     "    os.makedirs(local_path_save)\n",
@@ -88,21 +96,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "12fa7ae6",
+   "execution_count": 5,
+   "id": "d6148161",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO"
+    "run_name = 'base'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a092af7a",
+   "execution_count": 6,
+   "id": "25ef7058",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davideposillipo/Documents/Didattica.nosync/DSR_ML_Fundamentals_2023/scripts/Preprocessing.py:161: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "  df['lpep_pickup_datetime_week'] = df['lpep_pickup_datetime'].dt.week\n",
+      "/Users/davideposillipo/Documents/Didattica.nosync/DSR_ML_Fundamentals_2023/scripts/Preprocessing.py:161: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "  df['lpep_pickup_datetime_week'] = df['lpep_pickup_datetime'].dt.week\n"
+     ]
+    }
+   ],
+   "source": [
+    "prepr = Preprocessing(input_data_path_train, task_type='classification')\n",
+    "X, Y = prepr.read_dataframe(request_tgt=True)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y, test_size=0.3, random_state=seed)\n",
+    "\n",
+    "\n",
+    "#preprocessing ohe\n",
+    "shapes_pre = (X_train.shape[0], X_test.shape[0])\n",
+    "X_train_ohe, ohe, scaler = prepr.preprocess_for_classification(df=X_train, \n",
+    "                                                               fit_ohe=True,\n",
+    "                                                               perform_scaling=True)\n",
+    "X_test_ohe, _, _ = prepr.preprocess_for_classification(df=X_test, \n",
+    "                                                    ohe=ohe,\n",
+    "                                                    perform_scaling=True,\n",
+    "                                                    scaler=scaler)\n",
+    "assert shapes_pre == (X_train.shape[0], X_test.shape[0])\n",
+    "dump(ohe, open(local_path_save + run_name + '_ohe.pkl', 'wb'))\n",
+    "dump(scaler, open(local_path_save + run_name + '_scaler.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "11b9519e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "gradient_boosting_training = BinaryClassificationTraining(\n",
+    "    input_data_path,\n",
+    "    local_path_save,\n",
+    "    year_month,\n",
+    "    'gradient_boosting')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a092af7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:03<00:00,  3.04s/trial, best loss: 0.6286334502890578]\n",
+      "  0%|                                                                                                                            | 0/1 [00:00<?, ?trial/s, best loss=?]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davideposillipo/.pyenv/versions/3.10.9/envs/prova/lib/python3.10/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:08<00:00,  8.82s/trial, best loss: 0.6807145155974677]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:15<00:00, 15.23s/trial, best loss: 0.6978598173206313]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:21<00:00, 21.10s/trial, best loss: 0.7099068964614647]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:27<00:00, 27.83s/trial, best loss: 0.7168051128569203]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:33<00:00, 33.98s/trial, best loss: 0.7205579876714626]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for B in np.arange(10,600,100, dtype=int):\n",
+    "    \n",
+    "    max_evals = 1\n",
+    "                   \n",
+    "    # Here we can decide which hyperparameters we want to tune\n",
+    "    gb_parameters_search = {\n",
+    "        'n_estimators': B,\n",
+    "        'max_depth': 2\n",
+    "    }\n",
+    "\n",
+    "    gradient_boosting_training.set_hyperparameter_space(gb_parameters_search)\n",
+    "                   \n",
+    "    trials = Trials()\n",
+    "\n",
+    "    best_result = fmin(\n",
+    "        fn=partial(gradient_boosting_training.objective_gradient_boosting, \n",
+    "            X_train=X_train_ohe,\n",
+    "            X_test=X_test_ohe,\n",
+    "            Y_train=Y_train,\n",
+    "            Y_test=Y_test,\n",
+    "            run_name=run_name,\n",
+    "            threshold=0.89),\n",
+    "        space=gradient_boosting_training.hp_space,\n",
+    "        algo=tpe.suggest,\n",
+    "        max_evals=max_evals,\n",
+    "        trials=trials,\n",
+    "        rstate=np.random.default_rng(seed)\n",
+    "    )\n",
+    "\n",
+    "    best_result"
+   ]
   },
   {
    "cell_type": "code",
@@ -267,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cb70197a",
    "metadata": {},
    "outputs": [],
@@ -277,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "87bd453a",
    "metadata": {},
    "outputs": [],
@@ -291,12 +413,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e1517859",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davideposillipo/Documents/Didattica.nosync/DSR_ML_Fundamentals_2023/scripts/Preprocessing.py:161: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "  df['lpep_pickup_datetime_week'] = df['lpep_pickup_datetime'].dt.week\n",
+      "/Users/davideposillipo/Documents/Didattica.nosync/DSR_ML_Fundamentals_2023/scripts/Preprocessing.py:161: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n",
+      "  df['lpep_pickup_datetime_week'] = df['lpep_pickup_datetime'].dt.week\n"
+     ]
+    }
+   ],
    "source": [
     "prepr = Preprocessing(input_data_path_train, task_type='classification')\n",
     "X, Y = prepr.read_dataframe(request_tgt=True)\n",
@@ -320,16 +453,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9adee2a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davideposillipo/.pyenv/versions/3.10.9/envs/prova/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/davideposillipo/.pyenv/versions/3.10.9/envs/prova/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'loss': 0.5, 'status': 'ok'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculating the baseline\n",
     "\n",
     "xgb_ohe_training.calculate_classification_baseline(Y_train=Y_train, \n",
     "                                               Y_test=Y_test, run_name=run_name)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7303dfb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:02<00:00,  2.32s/trial, best loss: 0.6439432877765205]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:06<00:00,  6.01s/trial, best loss: 0.7100954027952776]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:09<00:00,  9.91s/trial, best loss: 0.7226257571485171]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:13<00:00, 13.76s/trial, best loss: 0.726733113104395]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:18<00:00, 18.43s/trial, best loss: 0.7296594601476045]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:22<00:00, 22.25s/trial, best loss: 0.7313985519144212]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for B in np.arange(10,600,100, dtype=int):\n",
+    "    \n",
+    "    max_evals = 1\n",
+    "                   \n",
+    "    # Here we can decide which hyperparameters we want to tune\n",
+    "    xgb_parameters_search = {\n",
+    "        'n_estimators': B,\n",
+    "        'max_depth': 2\n",
+    "    }\n",
+    "\n",
+    "    xgb_ohe_training.set_hyperparameter_space(xgb_parameters_search)\n",
+    "                   \n",
+    "    trials = Trials()\n",
+    "\n",
+    "    best_result = fmin(\n",
+    "        fn=partial(xgb_ohe_training.objective_xgb, \n",
+    "            X_train=X_train_ohe,\n",
+    "            X_test=X_test_ohe,\n",
+    "            Y_train=Y_train,\n",
+    "            Y_test=Y_test,\n",
+    "            run_name=run_name,\n",
+    "            threshold=0.89),\n",
+    "        space=xgb_ohe_training.hp_space,\n",
+    "        algo=tpe.suggest,\n",
+    "        max_evals=max_evals,\n",
+    "        trials=trials,\n",
+    "        rstate=np.random.default_rng(seed)\n",
+    "    )\n",
+    "\n",
+    "    best_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03bc850f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b3bde2d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40fd29a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
